# Arfa-Med

./: .env  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
data/: Arfa-Med.sqlite3
helm/django-website/: values.yaml
helm/django-website/templates/: deployment.yaml
pythonProject1/Arfamed/: manage.py
pythonProject1/Arfamed/Arfamed/: asgi.py  settings.py  urls.py  wsgi.py
pythonProject1/Arfamed/site_app/: admin.py
src/core/: auth.py  jazzmin.py  settings.py  simplejwt.py  urls.py
src/ctrl/: paggination.py
src/page/about_us/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/page/about_us/migrations/: 0001_initial.py  0002_aboutuscreator_certificate.py
src/page/appointments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/page/appointments/migrations/: 0001_initial.py
src/page/blog/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/page/blog/migrations/: 0001_initial.py  0002_advertisement_alter_categories_id_mainblog.py  0003_alter_mainblog_category.py  0004_alter_mainblog_category.py
src/page/cardio/: apps.py  urls.py  views.py
src/page/contact_us/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/page/contact_us/migrations/: 0001_initial.py  0002_message.py  0003_alter_card_icon_alter_card_subtitle_alter_card_title_and_more.py  (+3 more)
src/page/dental/: apps.py  urls.py  views.py
src/page/devices/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/page/doctor_contact/: apps.py
src/page/eye_care/: apps.py  urls.py
src/page/faq/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/page/home/: admin.py  apps.py  models.py  serializers.py  translations.py  urls.py  views.py
src/page/orthopaedic/: apps.py  urls.py  views.py
src/page/our_doctors/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/page/services/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/page/single_blog/: apps.py  urls.py  views.py
src/page/x_ray/: apps.py  urls.py  views.py
(+50 files in other folders)
