[tool.poetry]
name = "arfa-med[api]"
version = "0.1.0"
description = ""
authors = ["Janik Tarverdyan <Janik.Tarverdyan@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
Django = "^5.0"
django-jazzmin = "^2.6.0"
django-rest = "^0.8.7"
django-ckeditor = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
